# Cryptid

./: CMakeLists.txt  Cryptid.cpp  Cryptid.h  README.md  changes.txt  resources.qrc  style.qss
